--- a/Foqos/foqos.entitlements
+++ b/Foqos/foqos.entitlements
@@ -16,7 +16,7 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.dev.ambitionsoftware.foqos</string>
+		<string>group.com.orbitlabs.simplesleep</string>
 	</array>
 	<key>com.apple.security.files.user-selected.read-only</key>
 	<true/>
