--- a/FoqosDeviceMonitor/FoqosDeviceMonitor.entitlements
+++ b/FoqosDeviceMonitor/FoqosDeviceMonitor.entitlements
@@ -6,7 +6,7 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.dev.ambitionsoftware.foqos</string>
+		<string>group.com.orbitlabs.simplesleep</string>
 	</array>
 </dict>
 </plist>
