--- a/FoqosWidget/FoqosWidgetExtension.entitlements
+++ b/FoqosWidget/FoqosWidgetExtension.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.dev.ambitionsoftware.foqos</string>
+		<string>group.com.orbitlabs.simplesleep</string>
 	</array>
 </dict>
 </plist>
